# perp-md

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTRACT.md  VERSIONING.md
src/perp_md/: __init__.py  client.py  errors.py  history.py  models.py  normalization.py  transport.py
src/perp_md/adapters/: __init__.py  base.py  ccxt.py  native.py
tests/: test_adapters.py  test_models.py  test_transport.py
tests/fixtures/: native_open_interest.json
