[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "perp-md"
version = "0.1.1"
description = "Typed, asynchronous open-interest market data adapters"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{name = "perp-md contributors"}]
keywords = ["market-data", "open-interest", "perpetuals", "asyncio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
ccxt = ["ccxt>=4.5,<5"]
dev = [
  "build>=1,<2",
  "ccxt>=4.5,<5",
  "pytest>=8,<10",
  "twine>=6,<7",
]

[project.urls]
Homepage = "https://github.com/latheiere/perp-md"
Repository = "https://github.com/latheiere/perp-md"
Issues = "https://github.com/latheiere/perp-md/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
perp_md = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
